# bioreactor

./: .gitignore
bottom/: bowl.blend  bowl.stl  bowl_bottom.blend  bowl_bottom.stl  bowl_bowl.blend  bowl_bowl.stl  bowl_full.blend  bowl_full.stl  bowl_ring.blend  bowl_ring.stl
circuit-boards/rgbw-led-module/: .gitignore  README.md  fp-lib-table  rgbw-led-module-cache.lib  rgbw-led-module.kicad_pcb  rgbw-led-module.pro  rgbw-led-module.sch  sym-lib-table  symbols.lib
component-library/GA12-N20-motor/: README.md
component-library/IRF520-MOSFET/: README.md
component-library/PCA9685/: README.md
component-library/ga12-n20-motor/: README.md
component-library/hifive1-revB/: README.md
component-library/htu21d-i2c-sensor/: README.md
component-library/htu21d-i2c-sensor/example_hifive/: Cargo.toml  README.md
component-library/htu21d-i2c-sensor/example_hifive/src/: main.rs
component-library/intllab-dp-diy-pump/: README.md
component-library/irf520-mosfet/: README.md
component-library/pump/: README.md
control-plane/hub/: Cargo.toml  README.md  hub.json
control-plane/hub/src/: api_auth.rs  api_device.rs  auth.rs  config.rs  device.rs  main.rs  network_bioreactor.rs  test_bioreactor.rs
led-scaffold/: README.md  scaffold-beam-edge-2.stl  scaffold-beam-edge.blend  scaffold-beam-edge.stl  scaffold-beam-middle.blend  scaffold-beam-middle.stl  scaffold-complete.blend  scaffold-ring.blend  scaffold-ring.stl
led_scaffold/: bolt-nut-pcb-utils.blend  pillars.blend  pillars.stl  scaffold-beam-middle.blend  scaffold-ring.blend
mixing mechanism/: mixing mechanism (base).blend  mixing mechanism (base).stl  mixing mechanism (cog).blend  mixing mechanism (cog).stl  mixing mechanism (full assembly).blend  mixing mechanism (ring).blend  mixing mechanism (ring).stl  mixing mechanism (top).blend  mixing mechanism (top).stl
(+40 files in other folders)
