[package]
name = "control-hub"
version = "0.1.0-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
base64 = "0.13.0"
sha3 = "0.10.1"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = [ "serde" ] }
# Apparently, only tokio RwLock guarantees fairness. Also, tokio is already
# used by rocket, so probably no harm in adding the whole thing into dependencies.
tokio = { version = "1.17.0", features = [ "sync" ] }