[package]
name = "example_leds"
version = "0.0.0"
authors = ["Samuel Pastva"]
edition = "2018"
license = "ISC"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.3"
hifive1 = { version = "0.9.0", features = ["board-hifive1-revb"] }
panic-halt = "0.2.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"
crc = "2.1.0"

# this lets you use `cargo fix`!
[[bin]]
name = "example_leds"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
